--- a/webdev/index.html
+++ b/webdev/index.html
@@ -9,20 +9,16 @@
             background-color: seagreen;
         }
         input{
-            margin-left: 30px;
-            font-size: 30px;
-            width: 300px;
+            margin-left: 300px;
+            font-size: 72px;
+            width: 100px;
+            height: 300px;
         }
     </style>
+    <link rel="stylesheet" href="style.scss">
 </head>
 <body>
-    <input type='text' placeholder="Username">
-    <input type='password' placeholder="Password">
-
-    <script>
-        alert('Welcome...');
-        console.log('Bello');
-
-    </script>
+    <input type='text' placeholder="Algväärtus">
+    <script src="./main.js"></script>
 </body>
 </html>
